# catalog-guard-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  composer.json  pyproject.toml  registration.php
.github/workflows/: ci.yml
Block/Adminhtml/Audit/: Report.php
Block/Adminhtml/Review/: Actions.php
Controller/Adminhtml/Audit/: Index.php  Run.php
Controller/Adminhtml/Review/: AbstractMassAction.php  Apply.php  Generate.php  Index.php  MassApprove.php  MassReject.php  Rollback.php
Model/: PythonService.php  ReviewDataProvider.php
api/: __init__.py  app.py
docker/: Dockerfile  docker-compose.yml
docs/: DELIVERABLE.md  TRACEABILITY.md  USER_GUIDE.md  build-log.md  good-first-issues.md
docs/decisions/: ADR-000-context-and-standards.md  ADR-001-review-ui-htmx.md  ADR-002-native-orchestrator-and-pluggable-similarity.md
etc/: acl.xml  config.xml  module.xml
etc/adminhtml/: menu.xml  routes.xml  system.xml
evals/: baseline.json  score.py
src/catalogguard/: __main__.py  cli.py  config.py  reporting.py
src/catalogguard/agents/: apply.py  attribute.py  base.py  content.py  duplicate.py  extractor.py  fix_proposal.py  registry.py  sanity.py  seo.py
src/catalogguard/evals/: __init__.py  scoring.py  synthetic.py
src/catalogguard/graph/: langgraph_adapter.py  supervisor.py
src/catalogguard/logging/: __init__.py  cost.py
src/catalogguard/magento_client/: __init__.py  client.py
src/catalogguard/models/: __init__.py  enums.py  issue.py  product.py  proposal.py  report.py  state.py
src/catalogguard/providers/: base.py  bedrock.py  claude.py  factory.py  heuristic.py  similarity.py  stub.py
src/catalogguard/rules/: attributes.py  base.py  sanity.py  seo.py
src/catalogguard/storage/: approval.py  cache.py  checkpoint.py  rollback.py
src/catalogguard/tools/: __init__.py  trace_check.py
tests/integration/: test_review_api.py
tests/unit/: test_approval.py  test_attribute.py  test_cache.py  test_checkpoint_resume.py  test_config.py  test_content.py  test_cost_ledger.py  test_duplicate.py  test_evals.py  test_extractor.py  test_fix_proposal.py  test_graph.py  test_heuristic_provider.py  test_logging_setup.py  test_magento_client.py  test_models.py  test_providers.py  test_registry.py  test_reporting.py  test_rollback.py  test_rules_sanity.py  test_seo.py  test_trace_check.py
view/adminhtml/layout/: catalogguard_audit_index.xml  catalogguard_review_index.xml
view/adminhtml/templates/audit/: report.phtml
view/adminhtml/templates/review/: actions.phtml
view/adminhtml/ui_component/: catalogguard_review_listing.xml
