[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalogguard"
version = "0.1.0"
description = "CatalogGuard AI — LangGraph multi-agent Magento 2 catalog auditor with human-in-the-loop fixes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "NavinDBhudiya" }]
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "tenacity>=8.2",
    "structlog>=24.1",
    "typer>=0.12",
]

[project.optional-dependencies]
# Heavy/optional runtime deps land in their phase; kept separate so the core
# test suite stays fast and hermetic.
llm = ["anthropic>=0.40", "langgraph>=0.2", "langchain>=0.3", "chromadb>=0.5"]
api = ["fastapi>=0.110", "uvicorn>=0.29", "jinja2>=3.1"]
evals = ["ragas>=0.2", "langsmith>=0.1"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "import-linter>=2.0",
]

[project.scripts]
catalogguard = "catalogguard.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "evals"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = ["src/catalogguard"]
plugins = ["pydantic.mypy"]
exclude = '(providers/claude\.py|providers/bedrock\.py|providers/factory\.py|providers/chroma_index\.py|graph/langgraph_adapter\.py)'

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "boto3.*",
    "chromadb.*",
    "langgraph.*",
    "langchain.*",
    "ragas.*",
    "langsmith.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: requires a live Magento store or live LLM (opt-in via env)",
]

[tool.coverage.run]
branch = true
source = ["catalogguard"]
omit = [
    # Glue / entrypoints / network shims are integration-tested, not unit-covered.
    "*/catalogguard/cli.py",
    "*/catalogguard/__main__.py",
    "*/catalogguard/providers/claude.py",
    "*/catalogguard/providers/bedrock.py",
    "*/catalogguard/providers/factory.py",
    "*/catalogguard/providers/chroma_index.py",
    "*/catalogguard/graph/langgraph_adapter.py",
    "*/api/*",
    "*/ui/*",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

# Import-layering contract: enforce a clean dependency direction.
# graph → agents → (rules|providers|client|storage) → models. `logging` is
# cross-cutting and intentionally excluded. Verified by `lint-imports`.
[tool.importlinter]
root_package = "catalogguard"

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "catalogguard.graph",
    "catalogguard.agents",
    "catalogguard.rules | catalogguard.providers | catalogguard.magento_client | catalogguard.storage",
    "catalogguard.models",
]
